# agentops-lab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: workflow-analyst.md  workflow-reviewer.md  workflow-runner.md
.claude/commands/: evaluate-agent-workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_report.md  feature_request.md
.github/workflows/: tests.yml
autoresearch/: README.md
autoresearch/analysis/: autoresearch_cifar10_deployment_accounting.py  autoresearch_cifar10_longrun_plots.py  autoresearch_cifar10_longrun_report.py  autoresearch_cifar10_mode_catalog.py  autoresearch_cifar10_model_routing.py  autoresearch_cifar10_pilot.py  autoresearch_cifar10_router_decisions.py  autoresearch_cifar10_single_trajectory_campaign.py  autoresearch_cifar10_threshold_sweep.py  autoresearch_cifar10_throughput.py  autoresearch_cifar10_workload_accounting.py  autoresearch_cifar10_z_signal_ablation.py
autoresearch/configs/: autoresearch_cifar10_cnn4096_router_probe.yaml  autoresearch_cifar10_cnn4096_router_solver.yaml  (+6 more)
configs/: README.md  models.yaml  profiles.yaml
docs/: README.md  demo.md  demo_script.md  demo_walkthrough.md  index.html  reproducibility.md  reviewer_checklist.md
experiments/: README.md  catalog.md  imported_from_neurips_2026.md  reproducibility.md
scripts/: benchmark_parallel_capacity.py  compare_experiments.py  plot_agent_memory_ablation.py  plot_autoresearch_neural_substrates.py  plot_autoresearch_readme_figures.py  plot_autoresearch_visualtorch_architectures.py  plot_baseline.py  plot_baseline_headroom.py  plot_evaluation_protocol_calibration.py  plot_experiment_overview.py  plot_product_evidence_assets.py  plot_swarm_baselines.py  run_best_params_merge.py  run_merge_phase.py  run_parallel_experiment.py  run_single_long_experiment.py
studies/: README.md
tests/: test_agent_workflow_surface.py  test_autoresearch_adapter.py  test_baseline_calibration.py  test_blackboard.py  test_budget_enforcement.py  test_capacity_benchmark.py  test_certified_time.py  test_collector.py  test_diversity_metrics.py  test_doctor.py  test_log_parser.py  test_merger.py  test_reasoning_trace.py  test_snapshotting.py  test_swarm_shared_memory.py  test_workspace_isolation.py
(+334 files in other folders)
