[project]
name = "agent-workflow"
version = "0.1.0"
description = "Build and score Claude Code agent workflows before expensive runs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
# Heavy dependencies are optional so `uv run agent-workflow demo` stays quick.
autoresearch = [
    "torch>=2.7",
    "torchvision>=0.22",
]
swebench = [
    "datasets>=3.0",
    "docker>=7.1",
    "pydantic>=2.0",
    "swebench>=4.0",
    "tqdm>=4.67",
]
analysis-ml = [
    "scipy>=1.15",
    "sentence-transformers>=3.0",
    "torch>=2.7",
]
all-experiments = [
    "datasets>=3.0",
    "docker>=7.1",
    "pydantic>=2.0",
    "scipy>=1.15",
    "sentence-transformers>=3.0",
    "swebench>=4.0",
    "torch>=2.7",
    "torchvision>=0.22",
    "tqdm>=4.67",
]

[project.scripts]
agent-workflow = "agent_workflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# Note: requires Python >=3.10. On this system use:
#   ~/miniforge3/bin/python3.13 -m pytest tests/ -v
